<resources>
    <string name="app_name">MonSTer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sls">Daftar SLS</string>
    <string name="add_sls">Tambah SLS</string>
    <string name="delete_sls">Hapus SLS</string>
    <string name="progress_sls">Progres</string>
    <string name="pendampingan_sls">Pendampingan</string>
    <string name="upload">Upload</string>
    <string name="label_waktu_pendampingan">Waktu Pendampingan</string>
    <string name="label_add_pendampingan">Tambah Pendampingan</string>
    <string name="label_nama_sls">Nama SLS</string>
    <string name="label_nama_desa">Nama Desa/Kelurahan</string>
    <string name="label_sls_progres">Belum Selesai</string>
    <string name="label_sls_selesai">Selesai</string>
    <string name="label_pilih">Pilih</string>
    <string name="label_password">Kata Sandi</string>
    <string name="label_saya_lupa_kata_sandi">Saya lupa kata sandi</string>
    <string name="label_st2023">Sensus Pertanian 2023</string>
    <string name="label_halo">Halo</string>
    <string name="label_laporkan_progres">Laporkan Progres</string>
    <string name="title_setting">Setting</string>
    <string name="label_sinkronisasi">Sinkronisasi</string>
    <string name="label_lakukan_sinkronisasi">Lakukan Sinkronisasi</string>
    <string name="add_ruta">Tambah Ruta</string>
    <string name="label_nama_kk">Nama Kepala Keluarga</string>
    <string name="label_edit_ruta">Edit</string>
    <string name="label_info_ruta">Informasi Rumah Tangga Pertanian</string>
    <string name="label_identitas_ruta">Informasi Rumah Tangga Pertanian</string>
    <string name="label_info_usaha_tani">Informasi Usaha Pertanian</string>
    <string name="label_wawancara">Wawancara</string>
    <string name="label_start_wawancara">Mulai Wawancara</string>
    <string name="label_end_wawancara">Selesai Wawancara</string>
    <string name="label_re_wawancara">Ulangi Wawancara</string>
    <string name="label_save">Simpan</string>
    <string name="label_delete">Hapus</string>
    <string name="label_finish">Selesai</string>
    <string name="label_add_ruta">Tambah Ruta</string>
    <string name="label_save_finish">Simpan dan Nyatakan Selesai</string>
    <string-array name="urut">
        <item>Tidak Ada</item>
        <item>Nomor Urut Rumah Tangga Pertanian</item>
        <item>Nama Kepala Rumah Tangga Pertanian</item>
    </string-array>

    <string name="alert_username_exist">Email harus diisi dengan format email</string>
    <string name="alert_password_minimal">Password minimal 6 karakter </string>
</resources>