<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background_windows"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_300"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/label_nama_sls" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_3"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:text="@string/label_nama_desa" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_progress"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/progress_sls"
                android:backgroundTint="@color/green_900"
                android:layout_marginRight="10dp"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_pilih"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/label_pilih"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/green_900"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_status_progres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_900"
            android:layout_marginBottom="5dp"
            android:layout_gravity="end"
            android:textSize="11sp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/label_sls_progres" />

        <TextView
            android:id="@+id/txt_status_selesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_700"
            android:layout_marginBottom="5dp"
            android:layout_gravity="end"
            android:textSize="11sp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/label_sls_selesai" />

    </LinearLayout>
</androidx.cardview.widget.CardView>