<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_halo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black_300"
                android:text="@string/label_halo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/label_sinkronisasi"
                        android:textColor="@color/black_300" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="Untuk mengunduh data SLS tugas anda, lakukan sinkronisasi. Hati-hati dalam melakukan sinkronisasi karena akan menghapus data pencacahan progres anda, pastikan telah melakukan upload data sebelum menjalankan proses ini."
                        android:textColor="@color/black_3" />
                    <LinearLayout
                        android:id="@+id/linear_sync"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green_900"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="8dp"
                            android:padding="6dp"
                            android:text="@string/label_lakukan_sinkronisasi"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginEnd="8dp"
                            android:padding="6dp"
                            android:text=">"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green_200"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="Rangkuman Progres Anda"
                        android:textColor="@color/green_900" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="6dp"
                                android:textStyle="bold"
                                android:text="Jumlah SLS/Non SLS"
                                android:textColor="@color/black_300" />

                            <TextView
                                android:id="@+id/txt_jumlah_sls"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="0"
                                android:textStyle="bold"
                                android:textSize="17dp"
                                android:padding="5dp"
                                android:background="@drawable/bg_textview_summary"
                                android:textColor="@color/green_900" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:padding="6dp"
                                android:text="Jumlah Ruta Selesai"
                                android:textColor="@color/black_300" />

                            <TextView
                                android:id="@+id/txt_jumlah_ruta"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:textSize="17dp"
                                android:padding="5dp"
                                android:text="0"
                                android:background="@drawable/bg_textview_summary"
                                android:textColor="@color/green_900" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green_200"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_marginBottom="6dp"
                        android:text="Rincian Progres SLS"
                        android:textColor="@color/green_900" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvProgresSls"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:listitem="@layout/row_sls_dashboard" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>